<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    tools:context="com.dornier.fuelcarcare.ActivityRegister">

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <EditText
        android:id="@+id/RegisterEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/full_screen_margin"
        android:background="@drawable/field_layout"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <EditText
        android:id="@+id/RegisterPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/full_screen_margin"
        android:background="@drawable/field_layout"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <EditText
        android:id="@+id/RegisterConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/full_screen_margin"
        android:background="@drawable/field_layout"
        android:hint="@string/confirm_password"
        android:inputType="textPassword" />

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <Button
        android:id="@+id/RegisterConfirmButton"
        android:layout_margin="@dimen/full_screen_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_layout"
        android:hint="@string/confirm"/>

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"/>

</LinearLayout>
